aws/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  labels:
    app: backend 
spec:
  selector:
    app: backend

  ports:
    - port: 8080
      targetPort: 8080
